--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<hr>
 							<h4 class="about-title">LIST OF GITHUB PROJECTS</h4>
 							<ul>
-								<li><a href="https://github.com/christine-nkatha/christine.nkatha.git">PortFolio Project</a></li>
+								<li><a href="https://github.com/christine-nkatha/christine.nkatha">PortFolio Project</a></li>
 								<li><a href="https://github.com/christine-nkatha/christine.nkatha.git">Contact Us Page</a></li>
 								<li><a href="https://github.com/christine-nkatha/christine.nkatha.git">Social Media Platform</a></li>
 							</ul>
